# tablegram

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
corpus/exhaustive/: coverage.csv  flat_BSTR_boundaries.adtg  flat_BSTR_boundaries.roundtrip.xml  (+207 more)
docker/: Dockerfile.web  build_wasm.sh
fuzz/: Cargo.toml
src/: adtg.rs  adtg_write.rs  compat.rs  corpus_policy.rs  detect.rs  hexdiff.rs  lib.rs  main.rs  model.rs  native_compare.rs  util.rs  xml.rs  xml_write.rs
tests/: adtg_native.rs  adtg_writer.rs  all_corpus_native.rs  cli_native.rs  corpus_generated.rs  detect_and_diff.rs  exhaustive_corpus.rs  fuzz_corpus.rs  parser_api.rs  shaped_recordset.rs  sqlserver_sales_corpus.rs  variant_corpus.rs  xml_samples.rs  xml_writer.rs
tools/: dump_recordset_json.vbs  make_corpus.vbs  make_exhaustive_flat_corpus.vbs  make_fuzz_corpus.vbs  make_sales_sqlserver_corpus.vbs  make_shape_corpus.vbs  make_utf16be_xml.ps1  make_variant_corpus.vbs  make_variant_decimal.ps1  probe_dbtime_fraction.vbs  probe_field_attributes.vbs  probe_field_attributes_extra.vbs  probe_filetime_fraction.vbs  probe_filter_save.ps1  probe_float_specials.ps1  probe_large_varlen_fields.vbs  probe_pre_epoch_date.vbs  probe_reserved_row_attrs.vbs  probe_shape_query.vbs  probe_stream_charsets.ps1  probe_text_controls.ps1  probe_variant_error.cpp  roundtrip.vbs  sales_sqlserver_join.sql  sales_sqlserver_seed.sql  verify_fuzz_parse_any.sh
wasm_bindings/: Cargo.toml  LICENSE
wasm_bindings/src/: lib.rs
web/: index.html
(+478 files in other folders)
