[package]
name = "tablegram_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for tablegram"
license = "Apache-2.0"
repository = "https://github.com/ivere27/tablegram"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tablegram = { path = ".." }
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "z"
